# AWTC-R-backend

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  Shuttle.toml  schema.sql
.cargo/: config.toml
.sqlx/: query-095ea6baa800c0e68cd07865323b796146c6111a0588ceb028b0bfe7c39318cb.json  query-29db5a62ed2d42450d063dfeb151c5900d4eda789402bed9d7f28b049639fd38.json  query-540950dcf6eb3c5cd043978138afb6c833ab9d517e2fa2deb61b8d3a3b1db0d3.json  query-6952da5133b7e1bf0090d8ae64b83cc560e9b0c990db361a1366b78cceb83038.json  query-74d0f01ea500ec7681401cdb67b30230bc77b72a399fa102e09f82a1ce4c5f37.json  query-806ba22cc3b53c033a21d36ddaf2f5e1ff9e925440977fd604732256ac8dc3da.json  query-839d91ec291d5f0a2d9c16b13983e9605820bfed89b0daf961b2e5e412c8765a.json  query-8e19ae096fea15fb83bbd7588bdfaa6bb866646781f4252cbd06385ab924359a.json  query-94004c34d969bc694c6b0bed6a8556d41cd6dd1d54cff01ead53aa9edf1e22d2.json  query-a191426914c0cc10d5623681ba4e26721e4f6b693a2473675932fd3aac7095c4.json
src/: frontend.rs  main.rs
src/api/: data.rs  gps.rs  led_test.rs  mod.rs  paths.rs  trips.rs
