[package]
name = "group-project-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
csv = "1.3.0"
derive_more = "0.99.17"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { version = "1.0.107" }
shuttle-actix-web = "0.31.0"
shuttle-runtime = "0.31.0"
shuttle-shared-db = { version = "0.31.0", features = ["postgres"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "postgres", "time", "uuid", "json", "macros"] }
time = { version = "0.3.30", features = ["serde"] }
tokio = "1.33.0"
tracing = "0.1.40"
uuid = "1.5.0"
